kubernetes/szilardshome/infrastructure/networking/traefik/gateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: traefik-gateway-class 
spec:
  controllerName: traefik.io/gateway-controller
