kubernetes/szilardshome/infrastructure/networking/traefik/gateway-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-internal
  namespace: traefik 
spec:
  gatewayClassName: traefik-gateway-class
  listeners:
    - name: http-internal
      protocol: HTTP
      port: 80
      hostname: "*.szilardshome.com"
      allowedRoutes:
        namespaces:
          from: All
    - name: https-internal 
      protocol: HTTPS
      port: 443
      hostname: "*.szilardshome.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        # mode: Terminate 
        certificateRefs:
          - kind: Secret
            name: internal-tls-secret
            # group: ""
  addresses:
    - type: IPAddress
      value: 10.10.4.70
