kubernetes/szilardshome/infrastructure/networking/traefik/ds-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefiklocal.szilardshome.com`)
      kind: Rule
      # middlewares:
      #   - name: traefik-dashboard-basicauth
      #     namespace: traefik
      services:
        - name: api@internal
          kind: TraefikService
#  tls:
#    secretName: local-example-com-staging-tls
